adding my email address

--- a/userguide.tex
+++ b/userguide.tex
@@ -30,7 +30,7 @@
 
 
 \title{{\large Hand-out for the third session} \\ Hydrodynamic modelling of planet-disk interaction and planet migration}
-\author{\large Sareh Ataiee}
+\author{{\large Sareh Ataiee} \\ {\normalsize in case of a broken link please contact me on \href{mailto:sarehataiee@um.ac.ir}{sarehataiee@um.ac.ir}} }
 \date{}
 
 \begin{document}
