--- a/userguide.tex
+++ b/userguide.tex
@@ -50,7 +50,7 @@ cd fargo3d
 git clone https://bitbucket.org/fargo3d/public.git
 \end{minted}
 
-Now you should see the code directories in \verb!$HOME/fargo3d/public!. \href{http://fargo.in2p3.fr/manuals/FARGO3DUserGuide.pdf}{Here} is the code's user guide in pdf. Please check it out and try to compile and do the first run as is explained in the manula. After the first run, it is recommanded to read a little about the structure of the code in the third chapter. 
+Now you should see the code directories in \verb!$HOME/fargo3d/public!. \href{http://fargo.in2p3.fr/manuals/FARGO3DUserGuide.pdf}{Here} is the code's user guide in pdf. Please check it out and try to compile and do the first run as is explained in the manual. After the first run, it is recommanded to read a little about the structure of the code in the third chapter. 
 
 It is more convenient to make a small modification in the source code to have equal number of lines in the output files of the planets, namely \texttt{orbit\%n.dat} which keeps the orbital parameters of the \texttt{n}th planet, \texttt{bigplanet\%n.dat} that contains the position and velocity of the planet, and \texttt{tqwk\%n.dat} which keeps the disc torque and power on the planet. To do so, 
 \begin{itemize}
