--- a/userguide.tex
+++ b/userguide.tex
@@ -29,7 +29,7 @@
 \parskip = 0.4\baselineskip
 
 
-\title{{\large Hand-out for the third session} \\ Hydrodynamic modelling of planet-disk interaction and planet migration}
+\title{{\large Hand-on for the third session} \\ Hydrodynamic modelling of planet-disk interaction and planet migration}
 \author{{\large Sareh Ataiee} \\ {\normalsize in case of a broken link please contact me on \href{mailto:sarehataiee@um.ac.ir}{sarehataiee@um.ac.ir}} }
 \date{}
 
@@ -85,8 +85,8 @@ This package has only two main files containing a \texttt{PlotField} function. Y
 in your \texttt{IPython} environment. There are also a couple of classes named \texttt{Grid, ReadField} and \texttt{ReadPlanet}. Their description can be seen either by typing  \texttt{? <name>} where \verb!<name>! is the name of the class or a class's method, or simply reading the file \texttt{classes.py} in the \texttt{fargo3dplot} directory. 
 
 
-\section{What you would do during the hand-out session} \label{sec:during}
-In the hand-out session, we will play a bit with \texttt{FARGO3D} to understand how the torque on a planet and the disc surface density change in different conditions. If you have more than a free core on your computer, it would be faster to run the code in parallel (it would need openMPI though), otherwise you can go on with the sequential run. In case the simulation takes very long on a single core, you can download all outputs for this session from \href{https://fumdrive.um.ac.ir/index.php/s/ac6t3bdYtZZqjTi}{here}. 
+\section{What you would do during the hand-on session} \label{sec:during}
+In the hand-on session, we will play a bit with \texttt{FARGO3D} to understand how the torque on a planet and the disc surface density change in different conditions. If you have more than a free core on your computer, it would be faster to run the code in parallel (it would need openMPI though), otherwise you can go on with the sequential run. In case the simulation takes very long on a single core, you can download all outputs for this session from \href{https://fumdrive.um.ac.ir/index.php/s/ac6t3bdYtZZqjTi}{here}. 
 
 \subsection{Making a setup} \label{subsec:setup}
 For each exercise, we need to make a setup. It is easiest to copy one of the setup directories and then change it as you want. Type the below lines in your terminal to make a setup named \texttt{test1}.
